# graphiler

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  run_all.sh  setup.py  visualize.sh
artifact/: README.md  plot.py  prefetch_dataset.py  run_all.sh  run_breakdown.sh  visualize.sh
docker/: Dockerfile
examples/: CGAT.py  GAT.py  GCN.py  HGT.py  RGCN.py
examples/CGAT/: CGAT.py
examples/GAT/: GAT.py  GAT_DGL.py  GAT_PyG.py
examples/GCN/: GCN.py  GCN_DGL.py  GCN_PyG.py
examples/HGT/: HGT.py  HGT_DGL.py  HGT_PyG.py
examples/RGCN/: RGCN.py  RGCN_DGL.py  RGCN_PyG.py
include/: dglgraph.h  mpdfg.h
python/graphiler/: __init__.py  dgl_udf_batch.py  mpdfg_builder.py  mpdfg_optimizer.py  update_all.py
python/graphiler/utils/: __init__.py  bench.py  setup.py
scripts/: plot.py  prefetch_dataset.py
src/: builder.cpp  builder.h  dglgraph.cpp  mpdfg.cpp  pybind.cpp
src/builder/: builder.cpp  builder.h
src/ops/: ops.cuh
src/ops/broadcast/: broadcast.cu  scatter_kernel.cu
src/ops/dgl_primitives/: bcast.cc  bcast.h  cuda_common.h  functor.cuh  macro.cuh  sddmm.cu  sddmm.cuh  selector.h  spmm.cu  spmm.cuh  utils.h
src/ops/segment_mm/: segment_mm.cu
src/ops/segment_softmax/: segment_softmax.cu  segment_softmax_kernel.cu
src/optimizer/: dedup.cpp  fusion.cpp  optimizer.h  reorder.cpp  split.cpp
